Numbafied everything except SnowflakeSimulation

--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -54,9 +54,8 @@
    "outputs": [],
    "source": [
     "gu = icef.GeneralUtilities(101) # general utilities\n",
-    "\n",
-    "pu = icef.PhysicsUtilities(0.01, 10, X_0=2) # physics utilities\n",
-    "\n"
+    "pu = icef.PhysicsUtilities(0.01, 10, X_0=1) # physics utilities\n",
+    "sru = icef.SaturationRelaxationUtilities(101, 200)"
    ]
   },
   {
@@ -65,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sru = icef.SaturationRelaxationUtilities(101, 200)"
+    "gru = icef.GrowthUtilities(101)"
    ]
   },
   {
@@ -84,12 +83,12 @@
       "  [-2.6711958e+07 -2.6711958e+07 -2.6711958e+07 -2.6711958e+07\n",
       "   -2.6711958e+07 -2.6711958e+07]\n",
       "  ...\n",
-      "  [ 5.6051939e-45  9.4039548e-38  0.0000000e+00  0.0000000e+00\n",
+      "  [-1.7995002e+25  3.0647799e-41 -1.7967590e+25  3.0647799e-41\n",
+      "   -1.5743927e+25  3.0647799e-41]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 1.9259299e-33  6.8663625e-44 -3.5486770e+31  3.0682831e-41\n",
-      "   -3.5487389e+31  3.0682831e-41]\n",
-      "  [-3.5485532e+31  3.0682831e-41  1.1093356e-31  6.8663625e-44\n",
-      "   -3.5486770e+31  3.0682831e-41]]\n",
+      "  [-2.2701035e-43  9.8122028e-04  1.9744295e-42  0.0000000e+00\n",
+      "   -1.7669122e+25  3.0647799e-41]]\n",
       "\n",
       " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
       "    0.0000000e+00  0.0000000e+00]\n",
@@ -102,8 +101,8 @@
       "    1.6666667e-01  1.6666667e-01]\n",
       "  [ 1.6666667e-01  1.6666667e-01  0.0000000e+00  1.6666667e-01\n",
       "    1.6666667e-01  3.3333334e-01]\n",
-      "  [-3.5490019e+31  3.0682831e-41  4.2038954e-45  9.4039548e-38\n",
-      "    0.0000000e+00  0.0000000e+00]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00 -1.7670524e+25  3.0647799e-41\n",
+      "    1.4012985e-45  2.8025969e-45]]\n",
       "\n",
       " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
       "    0.0000000e+00  0.0000000e+00]\n",
@@ -116,52 +115,52 @@
       "    1.6666667e-01  1.6666667e-01]\n",
       "  [ 3.3333334e-01  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    3.3333334e-01  3.3333334e-01]\n",
-      "  [-3.0619596e+31  3.0682831e-41  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00 -1.7671935e+25  3.0647799e-41\n",
+      "    0.0000000e+00  5.6051939e-45]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[ 0.0000000e+00  0.0000000e+00 -3.5774165e+31  3.0682831e-41\n",
-      "    1.4012985e-45  5.6051939e-45]\n",
-      "  [-6.1517003e-43  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [-3.5774262e+31  3.0682831e-41  1.4012985e-45  5.6051939e-45\n",
-      "   -6.1376873e-43  0.0000000e+00]\n",
+      " [[           nan            nan -1.7725107e+25  3.0647799e-41\n",
+      "              nan            nan]\n",
+      "  [-1.7731582e+25  3.0647799e-41            nan            nan\n",
+      "   -1.5734427e+25  3.0647799e-41]\n",
+      "  [           nan            nan  0.0000000e+00  0.0000000e+00\n",
+      "              nan            nan]\n",
       "  ...\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]]\n",
+      "  [           nan            nan -1.5734648e+25  3.0647799e-41\n",
+      "              nan            nan]\n",
+      "  [-1.5734907e+25  3.0647799e-41            nan            nan\n",
+      "   -1.7723300e+25  3.0647799e-41]\n",
+      "  [           nan            nan -1.7716806e+25  3.0647799e-41\n",
+      "              nan            nan]]\n",
       "\n",
-      " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      " [[ 0.0000000e+00  0.0000000e+00            nan            nan\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [           nan            nan -1.7731508e+25  3.0647799e-41\n",
+      "              nan            nan]\n",
+      "  [ 0.0000000e+00  0.0000000e+00            nan            nan\n",
+      "   -1.7916160e+25  3.0647799e-41]\n",
       "  ...\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "  [-1.7719334e+25  3.0647799e-41            nan            nan\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]]\n",
+      "  [           nan            nan -1.7714371e+25  3.0647799e-41\n",
+      "              nan            nan]\n",
+      "  [-1.5734353e+25  3.0647799e-41            nan            nan\n",
+      "   -1.7916603e+25  3.0647799e-41]]\n",
       "\n",
-      " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
+      " [[           nan            nan -1.7723890e+25  3.0647799e-41\n",
+      "              nan            nan]\n",
+      "  [-1.5735128e+25  3.0647799e-41            nan            nan\n",
+      "   -1.7714630e+25  3.0647799e-41]\n",
+      "  [           nan            nan -1.7731103e+25  3.0647799e-41\n",
+      "              nan            nan]\n",
       "  ...\n",
-      "  [ 0.0000000e+00  0.0000000e+00  1.4012985e-45  3.0682831e-41\n",
-      "   -0.0000000e+00  3.0682831e-41]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  1.4012985e-45  3.0682831e-41\n",
-      "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 1.4012985e-45  3.0682831e-41 -0.0000000e+00  1.4012985e-45\n",
-      "    0.0000000e+00  0.0000000e+00]]]\n"
+      "  [           nan            nan -1.5736678e+25  3.0647799e-41\n",
+      "              nan            nan]\n",
+      "  [-1.7718706e+25  3.0647799e-41            nan            nan\n",
+      "   -1.7719186e+25  3.0647799e-41]\n",
+      "  [           nan            nan -1.7724222e+25  3.0647799e-41\n",
+      "              nan            nan]]]\n"
      ]
     }
    ],
@@ -209,25 +208,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "200\n",
-      "[[0.9937453  0.9931462  0.99264514 0.9922927  0.99213755]\n",
-      " [0.9923508  0.9916322  0.9910597  0.99070376 0.99058825]\n",
-      " [0.9906505  0.9897847  0.9891409  0.9888431  1.        ]\n",
-      " [0.9885575  0.9875037  0.98678505 0.986533   1.        ]\n",
-      " [0.9859507  0.98463356 0.9838852  1.         1.        ]\n",
-      " [0.9827002  0.980803   0.9797492  1.         1.        ]\n",
-      " [0.97920275 0.9744718  1.         1.         1.        ]\n",
+      "True\n",
+      "50\n",
+      "[[0.99865556 0.99835116 0.99807584 0.99787086 0.99777734]\n",
+      " [0.99790716 0.99746865 0.99709535 0.9968527  0.99677205]\n",
+      " [0.9968196  0.99620247 0.9957176  0.995485   1.        ]\n",
+      " [0.9952684  0.9944138  0.99380445 0.99358547 1.        ]\n",
+      " [0.9930891  0.991905   0.9912093  1.         1.        ]\n",
+      " [0.99010193 0.98826534 0.98723716 1.         1.        ]\n",
+      " [0.98661655 0.9819473  1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]\n",
-      " [1.         1.         1.         1.         1.        ]]\n"
+      " [1.         1.         1.         1.         1.        ]]\n",
+      "279 µs ± 7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -239,10 +239,13 @@
     "# for i in range(50):\n",
     "#     sru._execute_relaxation_step(sat_map_test, normal_cells_test, boundary_cells_test, opp_array_test, neighbor_array_test, boundary_map_test)\n",
     "\n",
-    "new_thang = sru.diffuse_to_convergence(sat_map_test, 200, 0.00001, normal_cells_test, boundary_cells_test, default_ice_map, boundary_map_test, neighbor_array_test, pu)\n",
+    "new_thang = sru.diffuse_to_convergence(sat_map_test, 200, 0.0001, normal_cells_test, boundary_cells_test, default_ice_map, boundary_map_test, neighbor_array_test, pu)\n",
     "print(new_thang[1])\n",
     "print(new_thang[2])\n",
-    "print(new_thang[0][-10:,:5])"
+    "print(new_thang[0][-10:,:5])\n",
+    "\n",
+    "\n",
+    "%timeit sru.diffuse_to_convergence(sat_map_test, 200, 0.001, normal_cells_test, boundary_cells_test, default_ice_map, boundary_map_test, neighbor_array_test, pu)"
    ]
   },
   {
