Un numbafied SnowflakeSimulation, planning to leave it that way

--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -73,6 +73,31 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "TypingError",
+     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\nInternal error at <numba.core.typeinfer.CallConstraint object at 0x7f4a07e8e3d0>.\nFailed in nopython mode pipeline (step: native lowering)\n\nEnable logging at debug level for details.\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_10093/2350759488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mSnowflakeSim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0micef\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSnowflakeSimulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m101\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# SnowflakeSim.GeneralU.neighbor_array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/experimental/jitclass/base.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m    122\u001b[0m         \u001b[0mbind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ctor_sig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_defaults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 124\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ctor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36m_compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    466\u001b[0m                 \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatch_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    467\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 468\u001b[0;31m             \u001b[0merror_rewrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'typing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    469\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUnsupportedError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m             \u001b[0;31m# Something unsupported is present in the user code, add help info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36merror_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    407\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    408\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 409\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    410\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    411\u001b[0m         \u001b[0margtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\nInternal error at <numba.core.typeinfer.CallConstraint object at 0x7f4a07e8e3d0>.\nFailed in nopython mode pipeline (step: native lowering)\n\nEnable logging at debug level for details.\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "SnowflakeSim = icef.SnowflakeSimulation(101, 200)\n",
+    "# SnowflakeSim.GeneralU.neighbor_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -83,12 +108,12 @@
       "  [-2.6711958e+07 -2.6711958e+07 -2.6711958e+07 -2.6711958e+07\n",
       "   -2.6711958e+07 -2.6711958e+07]\n",
       "  ...\n",
-      "  [-1.7995002e+25  3.0647799e-41 -1.7967590e+25  3.0647799e-41\n",
-      "   -1.5743927e+25  3.0647799e-41]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "  [ 3.5114725e-35  3.0880414e-41  1.4012985e-45  5.6051939e-45\n",
+      "    3.5113577e-35  3.0880414e-41]\n",
+      "  [ 0.0000000e+00  1.4012985e-45  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [-2.2701035e-43  9.8122028e-04  1.9744295e-42  0.0000000e+00\n",
-      "   -1.7669122e+25  3.0647799e-41]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  1.2342691e-37  0.0000000e+00\n",
+      "    1.9560961e-38  0.0000000e+00]]\n",
       "\n",
       " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
       "    0.0000000e+00  0.0000000e+00]\n",
@@ -101,8 +126,8 @@
       "    1.6666667e-01  1.6666667e-01]\n",
       "  [ 1.6666667e-01  1.6666667e-01  0.0000000e+00  1.6666667e-01\n",
       "    1.6666667e-01  3.3333334e-01]\n",
-      "  [ 0.0000000e+00  0.0000000e+00 -1.7670524e+25  3.0647799e-41\n",
-      "    1.4012985e-45  2.8025969e-45]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  3.5118399e-35  3.0880414e-41\n",
+      "    0.0000000e+00  5.6051939e-45]]\n",
       "\n",
       " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
       "    0.0000000e+00  0.0000000e+00]\n",
@@ -115,52 +140,52 @@
       "    1.6666667e-01  1.6666667e-01]\n",
       "  [ 3.3333334e-01  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    3.3333334e-01  3.3333334e-01]\n",
-      "  [ 0.0000000e+00  0.0000000e+00 -1.7671935e+25  3.0647799e-41\n",
-      "    0.0000000e+00  5.6051939e-45]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[           nan            nan -1.7725107e+25  3.0647799e-41\n",
-      "              nan            nan]\n",
-      "  [-1.7731582e+25  3.0647799e-41            nan            nan\n",
-      "   -1.5734427e+25  3.0647799e-41]\n",
-      "  [           nan            nan  0.0000000e+00  0.0000000e+00\n",
-      "              nan            nan]\n",
-      "  ...\n",
-      "  [           nan            nan -1.5734648e+25  3.0647799e-41\n",
-      "              nan            nan]\n",
-      "  [-1.5734907e+25  3.0647799e-41            nan            nan\n",
-      "   -1.7723300e+25  3.0647799e-41]\n",
-      "  [           nan            nan -1.7716806e+25  3.0647799e-41\n",
-      "              nan            nan]]\n",
-      "\n",
-      " [[ 0.0000000e+00  0.0000000e+00            nan            nan\n",
+      " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    4.1993801e-34  4.5858894e-41]\n",
+      "  [-4.1925788e-10  1.9406031e-14 -2.1480628e+23  4.5857492e-41\n",
+      "   -1.8045559e+01  2.0455127e-11]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [           nan            nan -1.7731508e+25  3.0647799e-41\n",
-      "              nan            nan]\n",
-      "  [ 0.0000000e+00  0.0000000e+00            nan            nan\n",
-      "   -1.7916160e+25  3.0647799e-41]\n",
       "  ...\n",
-      "  [-1.7719334e+25  3.0647799e-41            nan            nan\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [           nan            nan -1.7714371e+25  3.0647799e-41\n",
-      "              nan            nan]\n",
-      "  [-1.5734353e+25  3.0647799e-41            nan            nan\n",
-      "   -1.7916603e+25  3.0647799e-41]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
       "\n",
-      " [[           nan            nan -1.7723890e+25  3.0647799e-41\n",
-      "              nan            nan]\n",
-      "  [-1.5735128e+25  3.0647799e-41            nan            nan\n",
-      "   -1.7714630e+25  3.0647799e-41]\n",
-      "  [           nan            nan -1.7731103e+25  3.0647799e-41\n",
-      "              nan            nan]\n",
+      " [[ 0.0000000e+00  0.0000000e+00 -2.1481493e+23  4.5857492e-41\n",
+      "    6.8677253e+16 -1.5077295e-26]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "   -2.4413660e+23  4.5857492e-41]\n",
+      "  [-3.2245161e+16 -1.4663013e-04  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
       "  ...\n",
-      "  [           nan            nan -1.5736678e+25  3.0647799e-41\n",
-      "              nan            nan]\n",
-      "  [-1.7718706e+25  3.0647799e-41            nan            nan\n",
-      "   -1.7719186e+25  3.0647799e-41]\n",
-      "  [           nan            nan -1.7724222e+25  3.0647799e-41\n",
-      "              nan            nan]]]\n"
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00 -2.2004227e+23  4.5857492e-41\n",
+      "    3.8524568e+16 -1.4545152e-17]]\n",
+      "\n",
+      " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "   -2.4548091e+23  4.5857492e-41]\n",
+      "  [ 7.7670140e-19 -4.4936113e-24 -2.2568525e+23  4.5857492e-41\n",
+      "   -8.4420627e-01  2.1872967e-35]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  ...\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]]\n"
      ]
     }
    ],
@@ -173,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +252,7 @@
       " [1.         1.         1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]]\n",
-      "279 µs ± 7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "471 µs ± 14.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -246,6 +271,35 @@
     "\n",
     "\n",
     "%timeit sru.diffuse_to_convergence(sat_map_test, 200, 0.001, normal_cells_test, boundary_cells_test, default_ice_map, boundary_map_test, neighbor_array_test, pu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.60653067, 1.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gru.update_minimum_time(boundary_cells_test, sat_map_test, boundary_map_test, pu)\n",
+    "gru.minimum_time_increment\n",
+    "\n",
+    "gru.update_filling_array(boundary_cells_test, sat_map_test, boundary_map_test, pu)\n",
+    "gru.filling_array[-5:,:5]"
    ]
   },
   {
