--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -74,16 +74,16 @@
    "outputs": [
     {
      "ename": "TypingError",
-     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\nInternal error at <numba.core.typeinfer.CallConstraint object at 0x7f4a07e8e3d0>.\nFailed in nopython mode pipeline (step: native lowering)\n\nEnable logging at debug level for details.\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n",
+     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1mFailed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1m- Resolution failure for literal arguments:\n\u001b[1mFailed in nopython mode pipeline (step: native lowering)\nLLVM IR parsing error\n<string>:91:201: error: base element of getelementptr must be sized\n  %\".13\" = getelementptr inbounds {i32, i32, double, i32, i32, {i8*, i8*, i64, i64, i8*, [2 x i64], [2 x i64]}, {i8*, i8*, i64, i64, double*, [2 x i64], [2 x i64]}, %\"deferred.139748488724096.data\"}, {i32, i32, double, i32, i32, {i8*, i8*, i64, i64, i8*, [2 x i64], [2 x i64]}, {i8*, i8*, i64, i64, double*, [2 x i64], [2 x i64]}, %\"deferred.139748488724096.data\"}* %\".12\", i32 0, i32 0\n                                                                                                                                                                                                        ^\n\u001b[0m\n\u001b[0m\u001b[1m- Resolution failure for non-literal arguments:\n\u001b[1mNone\u001b[0m\n\u001b[0m\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: BoundFunction((<class 'numba.core.types.misc.ClassInstanceType'>, '_construct_minimal_ice_map') for instance.jitclass.SnowflakeSimulation#7f1a04114bb0<L:int32,W:int32,initial_sat:float64,max_diffusion_iter:int32,max_cycles:int32,ice_map:array(bool, 2d, C),sat_map:array(float64, 2d, C),GeneralU:DeferredType#139748488724096>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at /home/t-o/repos/Cellular-automaton-ice/ice_funcs.py (784)\n\u001b[0m\n\u001b[1m\nFile \"ice_funcs.py\", line 784:\u001b[0m\n\u001b[1m    def __init__(self, L, max_diffusion_iter, max_cycles=100, initial_sat=1): ########################################## add all simulation parameters later\n        <source elided>\n        # initialize default ice map\n\u001b[1m        self.ice_map = self._construct_minimal_ice_map()\n\u001b[0m        \u001b[1m^\u001b[0m\u001b[0m\n\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SnowflakeSimulation#7f1a04114bb0<L:int32,W:int32,initial_sat:float64,max_diffusion_iter:int32,max_cycles:int32,ice_map:array(bool, 2d, C),sat_map:array(float64, 2d, C),GeneralU:DeferredType#139748488724096>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SnowflakeSimulation#7f1a04114bb0<L:int32,W:int32,initial_sat:float64,max_diffusion_iter:int32,max_cycles:int32,ice_map:array(bool, 2d, C),sat_map:array(float64, 2d, C),GeneralU:DeferredType#139748488724096>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_10093/2350759488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mSnowflakeSim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0micef\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSnowflakeSimulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m101\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# SnowflakeSim.GeneralU.neighbor_array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_10130/2350759488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mSnowflakeSim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0micef\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSnowflakeSimulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m101\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# SnowflakeSim.GeneralU.neighbor_array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/experimental/jitclass/base.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m    122\u001b[0m         \u001b[0mbind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ctor_sig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_defaults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 124\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ctor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36m_compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    466\u001b[0m                 \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatch_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    467\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 468\u001b[0;31m             \u001b[0merror_rewrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'typing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    469\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUnsupportedError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m             \u001b[0;31m# Something unsupported is present in the user code, add help info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36merror_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    407\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    408\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 409\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    410\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    411\u001b[0m         \u001b[0margtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\nInternal error at <numba.core.typeinfer.CallConstraint object at 0x7f4a07e8e3d0>.\nFailed in nopython mode pipeline (step: native lowering)\n\nEnable logging at debug level for details.\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n"
+      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1mFailed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1m\u001b[1m- Resolution failure for literal arguments:\n\u001b[1mFailed in nopython mode pipeline (step: native lowering)\nLLVM IR parsing error\n<string>:91:201: error: base element of getelementptr must be sized\n  %\".13\" = getelementptr inbounds {i32, i32, double, i32, i32, {i8*, i8*, i64, i64, i8*, [2 x i64], [2 x i64]}, {i8*, i8*, i64, i64, double*, [2 x i64], [2 x i64]}, %\"deferred.139748488724096.data\"}, {i32, i32, double, i32, i32, {i8*, i8*, i64, i64, i8*, [2 x i64], [2 x i64]}, {i8*, i8*, i64, i64, double*, [2 x i64], [2 x i64]}, %\"deferred.139748488724096.data\"}* %\".12\", i32 0, i32 0\n                                                                                                                                                                                                        ^\n\u001b[0m\n\u001b[0m\u001b[1m- Resolution failure for non-literal arguments:\n\u001b[1mNone\u001b[0m\n\u001b[0m\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: BoundFunction((<class 'numba.core.types.misc.ClassInstanceType'>, '_construct_minimal_ice_map') for instance.jitclass.SnowflakeSimulation#7f1a04114bb0<L:int32,W:int32,initial_sat:float64,max_diffusion_iter:int32,max_cycles:int32,ice_map:array(bool, 2d, C),sat_map:array(float64, 2d, C),GeneralU:DeferredType#139748488724096>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at /home/t-o/repos/Cellular-automaton-ice/ice_funcs.py (784)\n\u001b[0m\n\u001b[1m\nFile \"ice_funcs.py\", line 784:\u001b[0m\n\u001b[1m    def __init__(self, L, max_diffusion_iter, max_cycles=100, initial_sat=1): ########################################## add all simulation parameters later\n        <source elided>\n        # initialize default ice map\n\u001b[1m        self.ice_map = self._construct_minimal_ice_map()\n\u001b[0m        \u001b[1m^\u001b[0m\u001b[0m\n\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SnowflakeSimulation#7f1a04114bb0<L:int32,W:int32,initial_sat:float64,max_diffusion_iter:int32,max_cycles:int32,ice_map:array(bool, 2d, C),sat_map:array(float64, 2d, C),GeneralU:DeferredType#139748488724096>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: jitclass.SnowflakeSimulation#7f1a04114bb0<L:int32,W:int32,initial_sat:float64,max_diffusion_iter:int32,max_cycles:int32,ice_map:array(bool, 2d, C),sat_map:array(float64, 2d, C),GeneralU:DeferredType#139748488724096>\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <string> (3)\n\u001b[0m\n\u001b[1m\nFile \"<string>\", line 3:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n"
      ]
     }
    ],
@@ -108,12 +108,12 @@
       "  [-2.6711958e+07 -2.6711958e+07 -2.6711958e+07 -2.6711958e+07\n",
       "   -2.6711958e+07 -2.6711958e+07]\n",
       "  ...\n",
-      "  [ 3.5114725e-35  3.0880414e-41  1.4012985e-45  5.6051939e-45\n",
-      "    3.5113577e-35  3.0880414e-41]\n",
-      "  [ 0.0000000e+00  1.4012985e-45  0.0000000e+00  0.0000000e+00\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  1.2342691e-37  0.0000000e+00\n",
-      "    1.9560961e-38  0.0000000e+00]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
       "\n",
       " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
       "    0.0000000e+00  0.0000000e+00]\n",
@@ -126,8 +126,8 @@
       "    1.6666667e-01  1.6666667e-01]\n",
       "  [ 1.6666667e-01  1.6666667e-01  0.0000000e+00  1.6666667e-01\n",
       "    1.6666667e-01  3.3333334e-01]\n",
-      "  [ 0.0000000e+00  0.0000000e+00  3.5118399e-35  3.0880414e-41\n",
-      "    0.0000000e+00  5.6051939e-45]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
       "\n",
       " [[ 1.6666667e-01  3.3333334e-01  3.3333334e-01  1.6666667e-01\n",
       "    0.0000000e+00  0.0000000e+00]\n",
@@ -146,9 +146,9 @@
       " ...\n",
       "\n",
       " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "    4.1993801e-34  4.5858894e-41]\n",
-      "  [-4.1925788e-10  1.9406031e-14 -2.1480628e+23  4.5857492e-41\n",
-      "   -1.8045559e+01  2.0455127e-11]\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
       "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
       "  ...\n",
@@ -159,24 +159,24 @@
       "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]]\n",
       "\n",
-      " [[ 0.0000000e+00  0.0000000e+00 -2.1481493e+23  4.5857492e-41\n",
-      "    6.8677253e+16 -1.5077295e-26]\n",
+      " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
       "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "   -2.4413660e+23  4.5857492e-41]\n",
-      "  [-3.2245161e+16 -1.4663013e-04  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
       "  ...\n",
       "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
       "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
-      "  [ 0.0000000e+00  0.0000000e+00 -2.2004227e+23  4.5857492e-41\n",
-      "    3.8524568e+16 -1.4545152e-17]]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]]\n",
       "\n",
       " [[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "   -2.4548091e+23  4.5857492e-41]\n",
-      "  [ 7.7670140e-19 -4.4936113e-24 -2.2568525e+23  4.5857492e-41\n",
-      "   -8.4420627e-01  2.1872967e-35]\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
+      "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
+      "    0.0000000e+00  0.0000000e+00]\n",
       "  [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
       "    0.0000000e+00  0.0000000e+00]\n",
       "  ...\n",
@@ -252,7 +252,7 @@
       " [1.         1.         1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]\n",
       " [1.         1.         1.         1.         1.        ]]\n",
-      "471 µs ± 14.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "292 µs ± 6.55 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
